<resources>
    <string name="app_name">仓库管理系统</string>
    <string name="login">登录</string>
    <string name="login_input_username_hint">用户名</string>
    <string name="hint_password">密码</string>
    <string name="login_hold_hint">自动登录</string>
    <string name="login_forget_hint">忘记密码？</string>
    <string name="login_register_hint">注册</string>
    <string name="login_other_hint">其他方式登录</string>
    <string name="register_input_username_hint">新建用户名</string>
    <string name="register_input_phone_hint">请输入用户编号</string>
    <string name="register_input_phone1_hint">请输入手机号</string>
    <string name="register_username_hint">用户名</string>
    <string name="register_password_hint">输入新密码</string>
    <string name="register_type1">仓库管理员</string>
    <string name="register_type2">操作员</string>
    <string name="findPwd_sms_auth_code">短信密码</string>
    <string name="findPwd_sms_hint">获取密码</string>
    <string name="findPwd_confirm">确定</string>
    <string name="main_basic">数据</string>
    <string name="main_outin">出入库</string>
    <string name="main_warehouse">库存</string>
    <string name="main_query">查询</string>
    <string name="main_me">我的</string>
    <string name="main_basic_supply">供应商信息管理</string>
    <string name="main_basic_item">货物信息管理</string>
    <string name="main_basic_picker">取货员信息管理</string>
    <string name="main_basic_dept">部门信息管理</string>
    <string name="main_basic_puw_sel">查询此行详细信息</string>
    <string name="main_basic_puw_del">删除此行信息</string>
    <string name="main_basic_puw_edit">修改此行信息</string>
    <string name="main_basic_puw_create">增添新行信息</string>
    <string name="supply_listview_item1">供应商编号</string>
    <string name="supply_listview_item2">供应商名称</string>
    <string name="supply_listview_item3">供应类别</string>
    <string name="supply_listview_item4">供应物品</string>
    <string name="dept_listview_item1">部门编号</string>
    <string name="dept_listview_item2">部门名称</string>
    <string name="dept_listview_item3">联系方式</string>
    <string name="item_listview_item1">物品编号</string>
    <string name="item_listview_item2">物品名称</string>
    <string name="item_listview_item3">物品数量</string>
    <string name="item_listview_item4">物品位置</string>
    <string name="picker_listview_item1">取货员编号</string>
    <string name="picker_listview_item2">取货员姓名</string>
    <string name="picker_listview_item3">联系方式</string>
    <string name="picker_listview_item4">所属部门</string>
    <string name="supply_supplyid">供应商编号:</string>
    <string name="supply_supplyid_hint">请输入编号</string>
    <string name="supply_supplyname">供应商名称:</string>
    <string name="supply_supplyname_hint">请输入名称</string>
    <string name="supply_address">供应商地址:</string>
    <string name="supply_address_hint">请输入地址</string>
    <string name="supply_linkman">供应商联系人:</string>
    <string name="supply_linkman_hint">请输入联系人</string>
    <string name="supply_phone">供应商联系方式:</string>
    <string name="supply_phone_hint">请输入联系方式</string>
    <string name="supply_postalcode">供应商邮编:</string>
    <string name="supply_postalcode_hint">请输入邮编</string>
    <string name="supply_itemtype">供应类别:</string>
    <string name="supply_itemtype_hint">请输入类别</string>
    <string name="supply_itemname">供应物品:</string>
    <string name="supply_itemname_hint">请输入物品名称</string>
    <string name="picker_pickerid">取货员编号:</string>
    <string name="picker_pickerid_hint">请输入编号</string>
    <string name="picker_pickername">取货员姓名:</string>
    <string name="picker_pickername_hint">请输入姓名</string>
    <string name="picker_phone">取货员电话:</string>
    <string name="picker_phone_hint">请输入电话</string>
    <string name="picker_belongdept">所属部门:</string>
    <string name="picker_belongdept_hint">请输入部门编号</string>
    <string name="dept_deptid">部门编号:</string>
    <string name="dept_deptid_hint">请输入编号</string>
    <string name="dept_deptname">部门名称:</string>
    <string name="dept_deptname_hint">请输入名称</string>
    <string name="dept_phone">部门电话:</string>
    <string name="dept_phone_hint">请输入电话</string>
    <string name="item_itemid">物品编号:</string>
    <string name="item_itemid_hint">请输入编号</string>
    <string name="item_itemname">物品名称:</string>
    <string name="item_itemname_hint">请输入名称</string>
    <string name="item_itemtype">物品类型:</string>
    <string name="item_itemtype_hint">请输入类型</string>
    <string name="item_count">物品数量:</string>
    <string name="item_count_hint">请输入数量</string>
    <string name="item_unit">物品单位:</string>
    <string name="item_unit_hint">请输入单位</string>
    <string name="item_location">所处位置:</string>
    <string name="item_location_hint">请输入位置</string>
    <string name="item_price">物品价格:</string>
    <string name="item_price_hint">请输入价格</string>
    <string name="item_upperlimit">物品上限:</string>
    <string name="item_upperlimit_hint">请输入上限数量</string>
    <string name="item_lowerlimit">物品下限:</string>
    <string name="item_lowerlimit_hint">请输入下限数量</string>
    <string name="outin_bgout">出库管理</string>
    <string name="outin_bgin">入库管理</string>
    <string name="outin_func1">管理员功能</string>
    <string name="outin_func2">操作员功能</string>
    <string name="main_outin_purchaseorder">填写采购单</string>
    <string name="main_outin_purchaseorder_price">采购价格</string>
    <string name="main_outin_pending_purchaseorder">待处理采购单</string>
    <string name="main_outin_inboundorder">填写入库单</string>
    <string name="main_outin_iteminbound">货物入库</string>
    <string name="main_outin_pickorder">取货单处理</string>
    <string name="main_outin_pending_pickorder">待处理取货单</string>
    <string name="main_outin_outboundorder">填写出库单</string>
    <string name="main_outin_itemoutbound">货物出库</string>
    <string name="main_outin_pcorder_pcorderID">采购单号</string>
    <string name="main_outin_inboundorder_ibID">入库单号</string>
    <string name="main_outin_inboundorder_supplyID">供应商编号</string>
    <string name="main_outin_inboundorder_itemID">物品编号</string>
    <string name="main_outin_inboundorder_itemType">物品类型</string>
    <string name="main_outin_pcorder_itemName">物品名称</string>
    <string name="main_outin_pcorder_count">数量</string>
    <string name="main_outin_pcorder_unit">单位</string>
    <string name="main_outin_pcorder_price">单价</string>
    <string name="main_outin_pcorder_date">期限日期</string>
    <string name="main_outin_iborder_date">日期</string>
    <string name="main_outin_pcorder_state">状态</string>
    <string name="main_outin_pcorder_else">备注</string>
    <string name="main_outin_pcorder_submit">提交</string>
    <string name="main_outin_pcorder_create">没有这种货物?添加新品货物</string>
    <string name="main_outin_new_pickorder">有1条新的取货申请</string>
    <string name="main_outin_look_pickorder">查看详情</string>
    <string name="main_outin_edit_pickorder">编辑对应的取货单</string>
    <string name="main_outin_pickorder_pickorderID">取货单号</string>
    <string name="main_outin_pickorder_date">取货日期</string>
    <string name="main_outin_outboundorder_pickerID">取货员编号</string>
    <string name="main_outin_outboundorder_obID">出库单号</string>
     <string name="main_warehouse_check">库存盘点</string>
     <string name="main_warehouse_inquiry">库存查询</string>
     <string name="main_warehouse_alarm">库存报警</string>
     <string name="main_warehouse_check_count1">库存数量</string>
     <string name="main_warehouse_check_count2">盘点数量</string>
     <string name="main_warehouse_check_count3">请输入盘点数量</string>
     <string name="main_warehouse_check_edit">更正数量</string>
     <string name="main_warehouse_check_message">下表是库存盘点清单，请点击盘查进行盘点</string>
     <string name="main_warehouse_inquiry_sel">查询</string>
     <string name="main_warehouse_inquiry_autohint">请选择要查询的物品</string>
     <string name="main_warehouse_inquiry_type">物品类型</string>
     <string name="main_warehouse_inquiry_message">请填写物品编号/物品名称进行查询</string>
     <string name="main_warehouse_alarm_reason">报警原因</string>
     <string name="main_query_outindetails">出入库明细</string>
     <string name="main_query_outinsummary">出入库汇总</string>
     <string name="main_query_inboundsta">收货对账单</string>
     <string name="main_query_outboundsta">发货对账单</string>
     <string name="main_query_details_datemessage">请填写查询日期</string>
     <string name="main_query_details_startdate">起始日期</string>
     <string name="main_query_details_enddate">终止日期</string>
     <string name="main_query_details_type">物品类别:</string>
     <string name="main_query_details_count1">单据号</string>
     <string name="main_query_details_count2">单据类别</string>
     <string name="main_query_details_count3">物品名称</string>
     <string name="main_query_details_count4">物品类型</string>
     <string name="main_query_details_count5">数量</string>
     <string name="main_query_details_count6">物品编号</string>
     <string name="main_query_details_count7">入库数量</string>
     <string name="main_query_details_count8">出库数量</string>
     <string name="main_query_details_count9">相关单位</string>
     <string name="main_me_uesrinfo">详细信息</string>
     <string name="main_me_uesrmanage">用户管理</string>
     <string name="main_me_editpwd">修改密码</string>
     <string name="main_me_permissionrequ">权限申请</string>
     <string name="main_me_permissionset">权限设置</string>
     <string name="main_me_quit">注销</string>
     <string name="main_me_uesrinfo_username">用户名:</string>
     <string name="main_me_uesrinfo_userpwd">用户密码:</string>
     <string name="main_me_uesrinfo_userid">工作编号:</string>
     <string name="main_me_uesrinfo_usertype">用户类型:</string>
     <string name="main_me_uesrinfo_permission">用户权限:</string>
     <string name="main_me_uesrinfo_phone">联系方式:</string>
     <string name="main_me_uesrinfo_username1">请输入用户名</string>
     <string name="main_me_uesrinfo_userpwd1">请输入用户密码</string>
     <string name="main_me_uesrinfo_userid1">请输入工作编号</string>
     <string name="main_me_uesrinfo_usertype1">请输入用户类型</string>
     <string name="main_me_uesrinfo_permission1">请输入用户权限</string>
     <string name="main_me_uesrinfo_phone1">请输入联系方式</string>
     <string name="main_me_editpwd1">原密码:</string>
     <string name="main_me_editpwd2">请输入原密码:</string>
     <string name="main_me_editpwd3">新密码:</string>
     <string name="main_me_editpwd4">请输入新密码:</string>
     <string name="main_me_editpwd5">确认新密码:</string>
     <string name="main_me_editpwd6">请再次输入新密码:</string>
     <string name="main_me_permissionrequ_perssion">当前权限</string>
     <string name="main_me_permission_requ">申请权限</string>
     <string name="main_meother_permission_set">处理</string>
     <string name="main_meother_permission_requester">申请人</string>
     <string name="main_meother_permission_requestdate">申请时间</string>
     <string name="main_meother_usermanage_adduser">新增用户</string>
     <string name="main_meother_usermanage_deluser">删除用户</string>
     <string name="main_meother_usermanage_edituser">修改信息</string>
    <string name="app_picker_name">Applications</string>
    <string name="bookmark_picker_name">Bookmarks</string>
    <string name="button_add_calendar">Add to calendar</string>
    <string name="button_add_contact">Add contact</string>
    <string name="button_book_search">Book Search</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_custom_product_search">Custom search</string>
    <string name="button_dial">Dial number</string>
    <string name="button_email">Send email</string>
    <string name="button_get_directions">Get directions</string>
    <string name="button_mms">Send MMS</string>
    <string name="button_ok">OK</string>
    <string name="button_open_browser">Open browser</string>
    <string name="button_product_search">Product search</string>
    <string name="button_search_book_contents">Search contents</string>
    <string name="button_share_app">Application</string>
    <string name="button_share_bookmark">Bookmark</string>
    <string name="button_share_by_email">Share via email</string>
    <string name="button_share_by_sms">Share via SMS</string>
    <string name="button_share_clipboard">Clipboard</string>
    <string name="button_share_contact">Contact</string>
    <string name="button_show_map">Show map</string>
</resources>