<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    <RelativeLayout
        android:id="@+id/rl_editpwd"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/white" >

        <ImageView
            android:id="@+id/iv_editpwd_arrow_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/arrow_back" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="40dp"
            android:layout_toRightOf="@id/iv_editpwd_arrow_back"
            android:text="@string/main_me_editpwd"
            android:textSize="24sp" />
    </RelativeLayout>
    
    <View
        android:id="@+id/div_tab_bar1"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/black" />

    <RelativeLayout
        android:id="@+id/me_pwd"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@color/white" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginLeft="10dp"
            android:gravity="center"
            android:text="@string/main_me_editpwd1" />
        
        <EditText
            android:id="@+id/tv_me_pwd"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="100dp"
            android:gravity="center"
            android:hint="@string/main_me_editpwd2"
            android:textSize="@dimen/font_14" />
    </RelativeLayout>
    
    <RelativeLayout
        android:id="@+id/me_newpwd"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="2dp"	
        android:background="@color/white" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginLeft="10dp"
            android:gravity="center"
            android:text="@string/main_me_editpwd3" />
        
        <EditText
            android:id="@+id/tv_me_newpwd"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="100dp"
            android:gravity="center"
            android:hint="@string/main_me_editpwd4"
            android:textSize="@dimen/font_14" />
    </RelativeLayout>
    
    <RelativeLayout
        android:id="@+id/me_againpwd"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="2dp"	
        android:background="@color/white" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginLeft="10dp"
            android:gravity="center"
            android:text="@string/main_me_editpwd5" />
        
        <EditText
            android:id="@+id/tv_me_againpwd"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="100dp"
            android:gravity="center"
            android:hint="@string/main_me_editpwd6"
            android:textSize="@dimen/font_14" />
    </RelativeLayout>
    
    <Button
            android:id="@+id/bt_me_editpwd_submit"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="40dp"
            android:background="@drawable/bg_login_submit"
            android:text="@string/main_outin_pcorder_submit"
            android:textColor="@color/white"
            android:textSize="@dimen/font_18" />

</LinearLayout>
