<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:id="@+id/dialog_supply__ll1"
        android:layout_width="wrap_content"
        android:layout_height="32dp"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/dialog_supply_tv1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/supply_supplyid"
            android:textColor="@color/white" />

        <EditText
            android:id="@+id/dialog_supply_et1"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="32dp"
            android:ellipsize="end"
            android:gravity="bottom"
            android:hint="@string/supply_supplyid_hint"
            android:inputType="text"
            android:singleLine="true"
            android:textSize="@dimen/font_10" />
    </LinearLayout>

    <View
        android:id="@+id/dialog_line1"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_below="@id/dialog_supply__ll1"
        android:background="@color/devide_line" />

    <LinearLayout
        android:id="@+id/dialog_supply_ll2"
        android:layout_width="wrap_content"
        android:layout_height="32dp"
        android:layout_below="@id/dialog_line1"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/dialog_supply_tv2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/supply_supplyname"
            android:textColor="@color/white" />

        <EditText
            android:id="@+id/dialog_supply_et2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="32dp"
            android:ellipsize="end"
            android:gravity="bottom"
            android:hint="@string/supply_supplyname_hint"
            android:inputType="text"
            android:singleLine="true"
            android:textSize="@dimen/font_10" />
    </LinearLayout>

    <View
        android:id="@+id/dialog_line2"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_below="@id/dialog_supply_ll2"
        android:background="@color/devide_line" />

    <LinearLayout
        android:id="@+id/dialog_supply_ll3"
        android:layout_width="wrap_content"
        android:layout_height="32dp"
        android:layout_below="@id/dialog_line2"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/dialog_supply_tv3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/supply_address"
            android:textColor="@color/white" />

        <EditText
            android:id="@+id/dialog_supply_et3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="32dp"
            android:ellipsize="end"
            android:gravity="bottom"
            android:hint="@string/supply_address_hint"
            android:inputType="text"
            android:singleLine="true"
            android:textSize="@dimen/font_10" />
    </LinearLayout>

    <View
        android:id="@+id/dialog_line3"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_below="@id/dialog_supply_ll3"
        android:background="@color/devide_line" />

    <LinearLayout
        android:id="@+id/dialog_supply_ll4"
        android:layout_width="wrap_content"
        android:layout_height="32dp"
        android:layout_below="@id/dialog_line3"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/dialog_supply_tv4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/supply_linkman"
            android:textColor="@color/white" />

        <EditText
            android:id="@+id/dialog_supply_et4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="18dp"
            android:ellipsize="end"
            android:gravity="bottom"
            android:hint="@string/supply_linkman_hint"
            android:inputType="text"
            android:singleLine="true"
            android:textSize="@dimen/font_10" />
    </LinearLayout>

    <View
        android:id="@+id/dialog_line4"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_below="@id/dialog_supply_ll4"
        android:background="@color/devide_line" />

    <LinearLayout
        android:id="@+id/dialog_supply_ll5"
        android:layout_width="wrap_content"
        android:layout_height="32dp"
        android:layout_below="@id/dialog_line4"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/dialog_supply_tv5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/supply_phone"
            android:textColor="@color/white" />

        <EditText
            android:id="@+id/dialog_supply_et5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="4dp"
            android:ellipsize="end"
            android:gravity="bottom"
            android:hint="@string/supply_phone_hint"
            android:inputType="text"
            android:singleLine="true"
            android:textSize="@dimen/font_10" />
    </LinearLayout>

    <View
        android:id="@+id/dialog_line5"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_below="@id/dialog_supply_ll5"
        android:background="@color/devide_line" />

    <LinearLayout
        android:id="@+id/dialog_supply_ll6"
        android:layout_width="wrap_content"
        android:layout_height="32dp"
        android:layout_below="@id/dialog_line5"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/dialog_supply_tv6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/supply_postalcode"
            android:textColor="@color/white" />

        <EditText
            android:id="@+id/dialog_supply_et6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="32dp"
            android:ellipsize="end"
            android:gravity="bottom"
            android:hint="@string/supply_postalcode_hint"
            android:inputType="text"
            android:singleLine="true"
            android:textSize="@dimen/font_10" />
    </LinearLayout>
    
    <View
        android:id="@+id/dialog_line6"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_below="@id/dialog_supply_ll6"
        android:background="@color/devide_line" />
    
    <LinearLayout
        android:id="@+id/dialog_supply_ll7"
        android:layout_width="wrap_content"
        android:layout_height="32dp"
        android:layout_below="@id/dialog_line6"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/dialog_supply_tv7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/supply_itemtype"
            android:textColor="@color/white" />

        <EditText
            android:id="@+id/dialog_supply_et7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="44dp"
            android:ellipsize="end"
            android:gravity="bottom"
            android:hint="@string/supply_itemtype_hint"
            android:inputType="text"
            android:singleLine="true"
            android:textSize="@dimen/font_10" />
    </LinearLayout>
    
    <View
        android:id="@+id/dialog_line7"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_below="@id/dialog_supply_ll7"
        android:background="@color/devide_line" />
    
    <LinearLayout
        android:id="@+id/dialog_supply_ll8"
        android:layout_width="wrap_content"
        android:layout_height="32dp"
        android:layout_below="@id/dialog_line7"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/dialog_supply_tv8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/supply_itemname"
            android:textColor="@color/white" />

        <EditText
            android:id="@+id/dialog_supply_et8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="44dp"
            android:ellipsize="end"
            android:gravity="bottom"
            android:hint="@string/supply_itemname_hint"
            android:inputType="text"
            android:singleLine="true"
            android:textSize="@dimen/font_10" />
    </LinearLayout>

</RelativeLayout>